--- a/app/views/settings/ratings/_ratings.html.erb
+++ b/app/views/settings/ratings/_ratings.html.erb
@@ -1,8 +1,13 @@
 <% def rate_settings_tabs %>
-  <% tabs = [{:name => 'currencies', :partial => 'rate_ratings/currencies', :label => :label_currencies}, {:name => 'languages', :partial => 'rate_ratings/languages', :label => :label_languages}] %>
+  <% tabs = [
+    {:name => 'currencies', :partial => 'rate_ratings/currencies', :label => :label_currencies},
+    {:name => 'languages', :partial => 'rate_ratings/languages', :label => :label_languages},
+    {:name => 'rating_types', :partial => 'rate_ratings/rating_types', :label => :label_rating_types},
+  ] %>
 <% end %>
 
 <% @currencies = Currency.all %>
 <% @languages = Language.all %>
+<% @rating_types = RatingType.all %>
 
 <%= render :template => 'rate_ratings/index' %>
