--- a/app/views/issues/_ratings_form.html.erb
+++ b/app/views/issues/_ratings_form.html.erb
@@ -3,7 +3,7 @@
 <div class="slidecontainer">
   <p>
     <label>Text Language</label>
-    <%= select_tag "issue[language]", (options_for_select(Language.all.collect { |p| [ p.value, p.id ] })) %>
+    <%= select_tag "issue[language]", (options_for_select(Language.all.collect { |p| [ p.value, p.id ] })), :required => true %>
   </p>
 </div>
 
