--- a/app/views/rate_ratings/_user_rate.html.erb
+++ b/app/views/rate_ratings/_user_rate.html.erb
@@ -1,10 +1,10 @@
 <% @rate = Rate.new %>
-<% @rating = Rating.new %>
+<% @rating = CaRating.new %>
 
 <% user = User.find(params[:id]) %>
 <% user_rate = Rate.where(user_id: user.id) %>
 
-<% ratings = Rating.where(rate_id: user_rate.ids) %>
+<% ratings = CaRating.where(rate_id: user_rate.ids) %>
 <fieldset class="box tabular">
   <p>
     <%= label_tag 'average_rating', 'Average Rating' %>
