Process done status for displaying rating for issue

--- a/app/views/issues/_ratings_form.html.erb
+++ b/app/views/issues/_ratings_form.html.erb
@@ -7,7 +7,7 @@
   </p>
 </div>
 
-<% if @issue.status.name == 'Closed' %>
+<% if @issue.status.name == 'Closed' || @issue.status.name == 'Done' %>
   <div class="slidecontainer">
     <% @rating_types.each do |rt| %>
       <p>
