add visibility of text languages for selected trackers and settings rules

--- a/app/views/issues/_ratings_form.html.erb
+++ b/app/views/issues/_ratings_form.html.erb
@@ -1,15 +1,21 @@
 <% @rating_types = RatingType.all %>
 
-<div class="slidecontainer">
-  <p>
-    <label>Text Language</label>
-    <%= select_tag "issue[language_id]", (options_for_select(Language.all.collect { |p| [ p.value, p.id ] }, :selected => @issue.issue_language.try(:value) )), {:include_blank => true} %>
-  </p>
-</div>
+<% if Setting.plugin_redmine_ratings['lang_tracker_ids'].include? @issue.tracker_id.to_s %>
+  <% if Setting.plugin_redmine_ratings['lang_visible'] == "1" || (User.current.roles.ids.any? && (User.current.roles.ids.to_a.map(&:to_s) & Setting.plugin_redmine_ratings['lang_role_ids'].to_a.map(&:to_s)).any? && Setting.plugin_redmine_ratings['lang_visible'] == "0") %>
+    <div class="slidecontainer">
+      <p>
+        <label>Text Language</label>
+        <%= select_tag "issue[language_id]", (options_for_select(Language.all.collect { |p| [ p.value, p.id ] }, :selected => @issue.issue_language.try(:value) )), {:include_blank => true} %>
+      </p>
+    </div>
+  <% end %>
+<% end %>
 
-<% if User.current.admin? || Setting.redmine_ratings['rating_visible'] == "1" || (User.current.roles.ids.any? && (User.current.roles.ids.to_a.map(&:to_s) & Setting.redmine_ratings['rating_role_ids'].to_a.map(&:to_s)).any? && Setting.redmine_ratings['rating_visible'] == "0") %>
 
-  <% if @issue.status.name == 'Closed' || @issue.status.name == 'Done' %>
+
+<% if Setting.plugin_redmine_ratings['rating_visible'] == "1" || (User.current.roles.ids.any? && (User.current.roles.ids.to_a.map(&:to_s) & Setting.plugin_redmine_ratings['rating_role_ids'].to_a.map(&:to_s)).any? && Setting.plugin_redmine_ratings['rating_visible'] == "0") %>
+
+  <% if User.current.admin? || @issue.status.name == 'Closed' || @issue.status.name == 'Done' %>
     <div class="slidecontainer">
       <% @rating_types.each do |rt| %>
         <p>
