--- a/app/views/settings/_redmine_ratings.html.erb
+++ b/app/views/settings/_redmine_ratings.html.erb
@@ -26,3 +26,41 @@
     </fieldset>
   </div>
 </div>
+
+<div class="splitcontentright">
+  <div class="box tabular">
+    <h4><%= l(:lang_field) %></h4>
+    <fieldset class="box tabular"><legend><%= l(:field_visible) %></legend>
+      <label class="block">
+        <%= radio_button_tag 'settings[lang_visible]', 1, @settings['lang_visible'].to_b, :id => 'lang_visible_on', :data => {:disables => '.lang_role input'} %>
+        <%= l(:label_visibility_public) %>
+      </label>
+      <label class="block">
+        <%= radio_button_tag 'settings[lang_visible]', 0, !@settings['lang_visible'].to_b, :id => 'lang_visible_off', :data => {:enables => '.lang_role input'} %>
+        <%= l(:label_visibility_roles) %>:
+      </label>
+      <% role_ids = @settings['lang_role_ids'] %>
+      <% Role.givable.sorted.each do |role| %>
+        <label class="block lang_role" style="padding-left:2em;">
+          <%= check_box_tag 'settings[lang_role_ids][]', role.id, role_ids.nil? ? false : role_ids.include?(role.id.to_s) , :id => nil %>
+          <%= role.name %>
+        </label>
+      <% end %>
+      <%= hidden_field_tag 'settings[lang_role_ids][]', '' %>
+    </fieldset>
+    <fieldset class="box" id="lang_tracker_ids">
+      <legend>
+        <%= toggle_checkboxes_link("#lang_tracker_ids input[type=checkbox]") %>
+        <%=l(:label_tracker_plural)%>
+      </legend>
+      <% tracker_ids = @settings['lang_tracker_ids'] %>
+      <% Tracker.sorted.each do |tracker| %>
+      <label class="block" for="lang_tracker_ids_<%=tracker.id%>" style="padding-left:2em;">
+        <%= check_box_tag 'settings[lang_tracker_ids][]', tracker.id, tracker_ids.nil? ? false : tracker_ids.include?(tracker.id.to_s), :id => 'lang_tracker_ids_#{tracker.id}' %>
+        <%= tracker.name %>
+      </label>
+      <% end %>
+      <%= hidden_field_tag 'settings[lang_tracker_ids][]', '' %>
+    </fieldset>
+  </div>
+</div>
